# RpT-Minigames-Server

./: .gitignore  CMakeLists.txt  Config.hpp  Filesystem.hpp  README.md  Variant.hpp  build.sh  client.py  install.sh
.github/workflows/: build.yml  ubuntu.yml  windows.yml
minigames-server/: CMakeLists.txt
minigames-server/src/: Main.cpp
minigames-services/: CMakeLists.txt
minigames-services/include/Minigames-Services/: Acores.hpp  AxisIterator.hpp  Bermudes.hpp  BoardGame.hpp  Canaries.hpp  ChatService.hpp  Grid.hpp  Lobby.hpp  LobbyService.hpp  MinigameService.hpp
minigames-services/src/: Acores.cpp  AxisIterator.cpp  Bermudes.cpp  BoardGame.cpp  Canaries.cpp  ChatService.cpp  Grid.cpp  Lobby.cpp  LobbyService.cpp  MinigameService.cpp
rpt-core/: CMakeLists.txt
rpt-core/include/RpT-Core/: CommandLineOptionsParser.hpp  Executor.hpp  InputEvent.hpp  InputOutputInterface.hpp  LoggerView.hpp  NetworkProtocol.hpp  Service.hpp  ServiceContext.hpp  ServiceEvent.hpp  ServiceEventRequestProtocol.hpp  ServicesEventRequestProtocol.hpp  Timer.hpp
rpt-core/src/: CommandLineOptionsParser.cpp  Executor.cpp  InputEvent.cpp  InputOutputInterface.cpp  LoggerView.cpp  Service.cpp  ServiceContext.cpp  ServiceEvent.cpp  ServiceEventRequestProtocol.cpp  Timer.cpp
rpt-gameplay/: CMakeLists.txt
rpt-gameplay/include/RpT-Gameplay/: Session.hpp
rpt-network/: CMakeLists.txt
rpt-network/include/RpT-Network/: BeastWebsocketBackend.hpp  BeastWebsocketBackendBase.inl  MessagesQueueView.hpp  NetworkBackend.hpp  SafeBeastWebsocketBackend.hpp  UnsafeBeastWebsocketBackend.hpp
rpt-network/src/: MessagesQueueView.cpp  NetworkBackend.cpp  SafeBeastWebsocketBackend.cpp  UnsafeBeastWebsocketBackend.cpp
rpt-serialization/: CMakeLists.txt
rpt-serialization/include/RpT-Serialization/: JsonSceneLoader.hpp
rpt-server/: CMakeLists.txt  Main.cpp
rpt-server/include/RpT-Server/: CommandLineOptionsParser.hpp
rpt-server/src/: CommandLineOptionsParser.cpp  Main.cpp
rpt-tests/: CMakeLists.txt  CommandLineOptionsParserTests.cpp
rpt-tests/include/RpT-Testing/: MinigamesServicesTestingUtils.hpp  SerTestingUtils.hpp  TestingUtils.hpp
rpt-tests/src/: AcoresTests.cpp  AxisIteratorTests.cpp  BermudesTests.cpp  BoardGameTests.cpp  CanariesTests.cpp  ChatServiceTests.cpp  CommandLineOptionsParserTests.cpp  CoreTests.cpp  GridTests.cpp  HandlingResultTests.cpp  InputEventTests.cpp  LobbyServiceTests.cpp  LoggingContextTests.cpp  MessagesQueueViewTests.cpp  MinigameServiceTests.cpp  MinigamesServicesTestingUtils.cpp  MinigamesServicesTests.cpp  NetworkBackendTests.cpp  NetworkTests.cpp  SerProtocolTests.cpp  SerTestingUtils.cpp  ServiceContextTests.cpp  ServiceEventTests.cpp  ServiceTests.cpp  TextProtocolParserTests.cpp  TimerTests.cpp  UtilsTests.cpp
rpt-utils/: CMakeLists.txt
rpt-utils/include/RpT-Utils/: CommandLineOptionsParser.hpp  HandlingResult.hpp  LoggerView.hpp  LoggingContext.hpp  TextProtocolParser.hpp
rpt-utils/src/: CommandLineOptionsParser.cpp  HandlingResult.cpp  LoggerView.cpp  LoggingContext.cpp  TextProtocolParser.cpp
